@@ -7,6 +7,7 @@ en:
       unconfirmed: 'You have to confirm your account before continuing.'
       invalid: 'Invalid email or password.'
       timeout: 'Your session expired, please sign in again to continue.'
+      inactive: 'Your account was not activated yet.'
     passwords:
       send_instructions: 'You will receive an email with instructions about how to reset your password in a few minutes.'
       updated: 'Your password was changed successfully. You are now signed in.'
