@@ -1,4 +1,4 @@
 class User < ActiveRecord::Base
-  devise :all
+  devise :all, :timeoutable
   attr_accessible :username, :email, :password, :password_confirmation
 end
